syntax = "proto3";

package jd_service;

import "google/protobuf/empty.proto";

option go_package = "github.com/Gerardo115pp/libery-dungeon/libery_JD_service;JD_service_pb";


message ServiceOnlineNotification {
    string service_name = 1;
    string service_route = 2;   
    string service_port = 3;
}

message ServiceOfflineNotification {
    string service_name = 1;
}

message PlatformEvent {
    string uuid = 1;
    string event_type = 2;  
    string event_message = 3;
    string event_payload = 4;
}


service JDService {
    rpc NotifyServiceOnline(ServiceOnlineNotification) returns (google.protobuf.Empty); 
    rpc NotifyServiceOffline(ServiceOfflineNotification) returns (google.protobuf.Empty);
    rpc EmitPlatformEvent(PlatformEvent) returns (google.protobuf.Empty);
}